tests/rosetta/out/Rust/circles-of-given-radius-through-two-points.error
rustc error: exit status 1
error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:52:92
   |
52 | ...0.9876 }, Point { x: 0.8765, y: 0.2345 }, 2.0], vec![Point { x: 0.0, y: 2.0 }, Point { x: 0.0, y: 0.0 }, 1.0], vec![Point { x: 0.1234,...
   |                                              ^^^ expected `Point`, found floating-point number

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:52:155
   |
52 | ... 0.0, y: 2.0 }, Point { x: 0.0, y: 0.0 }, 1.0], vec![Point { x: 0.1234, y: 0.9876 }, Point { x: 0.1234, y: 0.9876 }, 2.0], vec![Point ...
   |                                              ^^^ expected `Point`, found floating-point number

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:52:230
   |
52 | ...0.9876 }, Point { x: 0.1234, y: 0.9876 }, 2.0], vec![Point { x: 0.1234, y: 0.9876 }, Point { x: 0.8765, y: 0.2345 }, 0.5], vec![Point ...
   |                                              ^^^ expected `Point`, found floating-point number

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:52:305
   |
52 | ...0.9876 }, Point { x: 0.8765, y: 0.2345 }, 0.5], vec![Point { x: 0.1234, y: 0.9876 }, Point { x: 0.1234, y: 0.9876 }, 0.0]];
   |                                              ^^^ expected `Point`, found floating-point number

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:52:380
   |
52 | ...0.9876 }, Point { x: 0.1234, y: 0.9876 }, 0.0]];
   |                                              ^^^ expected `Point`, found floating-point number

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:65:23
   |
65 | ...   if caseStr == "Points form a diameter and describe only a single circle." || caseStr == "Coincident points with r==0.0 describe a d...
   |          -------    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `&str`
   |          |
   |          expected because this is `i32`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:65:97
   |
65 | ...gle circle." || caseStr == "Coincident points with r==0.0 describe a degenerate circle." {
   |                    -------    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `&str`
   |                    |
   |                    expected because this is `i32`

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:66:112
   |
66 | ...   println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", "   Center:  {", c1.x.to_string()), " "), c1.y.to_st...
   |                                                                                                          ^

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:66:137
   |
66 | ...   println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", "   Center:  {", c1.x.to_string()), " "), c1.y.to_st...
   |                                                                                                                                   ^

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:68:27
   |
68 |             if caseStr == "Two circles." {
   |                -------    ^^^^^^^^^^^^^^ expected `i32`, found `&str`
   |                |
   |                expected because this is `i32`

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:69:118
   |
69 | ...   println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", "   Center 1:  {", c1.x.to_string()), " "), c1.y.to_...
   |                                                                                                            ^

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:69:143
   |
69 | ...   println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", "   Center 1:  {", c1.x.to_string()), " "), c1.y.to_...
   |                                                                                                                                     ^

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:70:118
   |
70 | ...   println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", "   Center 2:  {", c2.x.to_string()), " "), c2.y.to_...
   |                                                                                                            ^

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:70:143
   |
70 | ...   println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", "   Center 2:  {", c2.x.to_string()), " "), c2.y.to_...
   |                                                                                                                                     ^

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:30:29
   |
30 |                 return vec![p1.clone(), p1.clone(), "Coincident points with r==0.0 describe a degenerate circle."];
   |                             ^^^^^^^^^^ expected `i32`, found `Point`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:32:25
   |
32 |             return vec![p1.clone(), p2.clone(), "Coincident points describe an infinite number of circles."];
   |                         ^^^^^^^^^^ expected `i32`, found `Point`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:35:25
   |
35 |             return vec![p1.clone(), p2.clone(), "R==0.0 does not describe circles."];
   |                         ^^^^^^^^^^ expected `i32`, found `Point`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:41:25
   |
41 |             return vec![p1.clone(), p2.clone(), "Points too far apart to form circles."];
   |                         ^^^^^^^^^^ expected `i32`, found `Point`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:45:25
   |
45 |             return vec![m.clone(), m.clone(), "Points form a diameter and describe only a single circle."];
   |                         ^^^^^^^^^ expected `i32`, found `Point`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircles-of-given-radius-through-two-points1564038428/001/prog.rs:50:21
   |
50 |         return vec![Point { x: m.x - oy, y: m.y + ox }, Point { x: m.x + oy, y: m.y - ox }, "Two circles."];
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `Point`

error: aborting due to 20 previous errors

Some errors have detailed explanations: E0308, E0610.
For more information about an error, try `rustc --explain E0308`.
